--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -3949,6 +3949,9 @@
                     colorRowBeige(listRowstoColor);
                     $(".dataTables_empty").html("אין הסעות لا توجد سفريات No drives");
 
+                    $('.checkboxClass').prop('checked', false);
+
+
 
                 },
                 error: function (err) {
