--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -855,7 +855,7 @@
                                             <th>מספר מקומות ברכב</th>
                                             <th>בוסטר ?</th>
                                             <th>כיסא תינוק ?</th>
-                                            <th>פעולות</th>
+                                            <th>פעולות <span title="המספר מעל אייקון הרכב מייצג את מספר ההסעות הייחודיות" style="cursor:help" >(ℹ️)</span></th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
