new location file

--- a/Road to Recovery/pages/locations map.html
+++ b/Road to Recovery/pages/locations map.html
@@ -124,7 +124,7 @@
             }
             $.ajax({
                 dataType: "json",
-                url: "WebService.asmx/getDestinationView",
+                url: "https://roadtorecovery.org.il/Gilad_test/Road%20to%20Recovery/pages/WebService.asmx/getDestinationView",
                 contentType: "application/json; charset=utf-8",
                 type: "POST",
                 async: false,
