--- a/Road to Recovery/pages/configScoreParameters.html
+++ b/Road to Recovery/pages/configScoreParameters.html
@@ -13,6 +13,8 @@
 </head>
 <body>
     <div class="container">
+        <button id="backBTN" onclick="BacktoCandidate()">חזרה לדף הקודם</button>
+
         <h1>ניהול ניקוד פרמטרים</h1>
         <div id="tables-container"></div>
         <button id="save-btn">שמירת שינויים</button>
