--- a/Road to Recovery/pages/viewCandidates.html
+++ b/Road to Recovery/pages/viewCandidates.html
@@ -136,19 +136,19 @@
 
                                     </div>
                                 </div>
-                                <div id="accordion" class="panel-group">
+                                <div id="" class="panel-group">
                                     <div class="panel panel-primary">
                                         <div class="panel-heading" id="col1">
                                             <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
-                                                <a id="collapsed1_aTag" href="#collapse1" data-parent="#accordion" data-toggle="collapse" class="dropdown active open">
-                                                    <span class="m-l-15">
-                                                        מסיעים חדשים בעמותה
+                                                <a id="collapsed1_aTag" href="" data-parent="" data-toggle="" class="dropdown active open">
+                                                    <span style="font-size:22px;" class="m-l-15">
+                                                        מועמדים להסעה
                                                     </span>
                                                 </a>
                                             </h4>
                                         </div>
 
-                                        <div class="panel-collapse collapse" id="collapse1">
+                                        <div class="panel-collapse " id="">
                                             <div class="panel-body">
 
                                                 <table id="datatable-candidates" class="table table-striped table-bordered">
@@ -157,19 +157,17 @@
                                                             <th class="middle" title="Time  الساعة">המתנדב.ת</th>
                                                             <th class="middle" title="Origin  نقطة الانطلاق">טלפון</th>
                                                             <th class="middle" title="Address عنوان">מקום מגורים</th>
-                                                            <th class="middle" title="Destination  نقطة الوصول">
+                                                            <th class="middle" title="last ride in weeks  نقطة الوصول">
                                                                 ההסעה האחרונה
-                                                                (ימים מאז)
+                                                                (בשבועות)
                                                             </th>
-                                                            <th class="middle" title="Patient  المريض">מס' הסעות בחודשיים האחרונים</th>
                                                             <th class="middle" title="Driver  السائق">
                                                                 ההסעה הבאה
                                                                 (ימים)
                                                             </th>
                                                             <th class="middle" title="Status  حالة السفرية">שיחה אחרונה</th>
                                                             <th class="middle" title="Seniority">
-                                                                ותק בעמותה
-                                                                (שנים)
+                                                              מושבים זמינים ברכב
                                                             </th>
                                                             <th class="middle" title="Match Score">
                                                                 ציון התאמה
@@ -183,145 +181,6 @@
                                             </div>
                                         </div>
                                     </div>
-
-
-                                    <div class="panel panel-primary">
-                                        <div class="panel-heading" id="col2">
-                                            <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
-                                                <a id="collapsed2_aTag" href="#collapse3" data-parent="#accordion" data-toggle="collapse">
-                                                    <span class="m-l-15">
-                                                        מסיעים פעילים
-                                                    </span>
-                                                </a>
-                                            </h4>
-                                        </div>
-                                        <div class="panel-collapse collapse" id="collapse3">
-                                            <div class="panel-body">
-                                                <table id="datatable-RegularDrivers" class="table table-striped table-bordered">
-                                                    <thead>
-                                                        <tr>
-                                                            <th class="middle" title="Time  الساعة">המתנדב.ת</th>
-                                                            <th class="middle" title="Origin  نقطة الانطلاق">טלפון</th>
-                                                            <th class="middle" title="Address عنوان">מקום מגורים</th>
-                                                            <th class="middle" title="Destination  نقطة الوصول">
-                                                                ההסעה האחרונה
-                                                                (ימים מאז)
-                                                            </th>
-                                                            <th class="middle" title="Patient  المريض">מס' הסעות בחודשיים האחרונים</th>
-                                                            <th class="middle" title="Driver  السائق">
-                                                                ההסעה הבאה
-                                                                (ימים)
-                                                            </th>
-                                                            <th class="middle" title="Status  حالة السفرية">שיחה אחרונה</th>
-                                                            <th class="middle" title="Last modified">
-                                                                ותק בעמותה
-                                                                (שנים)
-                                                            </th>
-                                                            <th class="middle" title="Match Score">
-                                                                ציון התאמה
-                                                            </th>
-                                                            <th class="middle" title="Actions  اعمال">פעולות</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody></tbody>
-                                                </table>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="panel panel-primary">
-                                        <div class="panel-heading" id="col3">
-                                            <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
-                                                <a id="collapsed3_aTag" href="#collapse2" data-parent="#accordion" data-toggle="collapse">
-                                                    <span class="m-l-15">
-                                                        סופר מסיעים
-                                                    </span>
-                                                </a>
-                                            </h4>
-                                        </div>
-                                        <div class="panel-collapse collapse" id="collapse2">
-                                            <div class="panel-body">
-                                                <table id="datatable-superDrivers" class="table table-striped table-bordered">
-                                                    <thead>
-                                                        <tr>
-                                                            <th class="middle" title="Time  الساعة">המתנדב.ת</th>
-                                                            <th class="middle" title="Origin  نقطة الانطلاق">טלפון</th>
-                                                            <th class="middle" title="Address عنوان">מקום מגורים</th>
-                                                            <th class="middle" title="Destination  نقطة الوصول">
-                                                                ההסעה האחרונה
-                                                                (ימים מאז)
-                                                            </th>
-                                                            <th class="middle" title="Patient  المريض">מס' הסעות בחודשיים האחרונים</th>
-                                                            <th class="middle" title="Driver  السائق">
-                                                                ההסעה הבאה
-                                                                (ימים)
-                                                            </th>
-                                                            <th class="middle" title="Status  حالة السفرية">שיחה אחרונה</th>
-                                                            <th class="middle" title="Last modified">
-                                                                ותק בעמותה
-                                                                (שנים)
-                                                            </th>
-                                                            <th class="middle" title="Match Score">
-                                                                ציון התאמה
-                                                            </th>
-                                                            <th class="middle" title="Actions  اعمال">פעולות</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody></tbody>
-                                                </table>
-                                            </div>
-                                        </div>
-                                    </div>
-
-
-
-                                    <!--<div class="panel panel-primary">
-        <div class="panel-heading" id="col2">
-            <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
-                <a href="#collapse3" data-parent="#accordion" data-toggle="collapse">
-                    <span class="m-l-15">
-                        מסיעים חדשים
-                    </span>
-                </a>
-            </h4>
-        </div>
-        <div class="panel-collapse collapse" id="collapse3">
-            <div class="panel-body">
-                <table id="datatable-newDrivers" class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th class="middle" title="Time  الساعة">המתנדב.ת</th>
-                            <th class="middle" title="Origin  نقطة الانطلاق">טלפון</th>
-                            <th class="middle" title="Address عنوان">מקום מגורים</th>
-                            <th class="middle" title="Destination  نقطة الوصول">
-                                ההסעה האחרונה
-                                (ימים מאז)
-                            </th>
-                            <th class="middle" title="Patient  المريض">מס' הסעות בחודשיים האחרונים</th>
-                            <th class="middle" title="Driver  السائق">
-                                ההסעה הבאה
-                                (ימים)
-                            </th>
-                            <th class="middle" title="Status  حالة السفرية">שיחה אחרונה</th>
-                            <th class="middle" title="Last modified">
-                                ותק בעמותה
-                                (שנים)
-                            </th>
-                            <th class="middle" title="Match Score">
-                                ציון התאמה
-                            </th>
-                            <th class="middle" title="Actions  اعمال">פעולות</th>
-                        </tr>
-                    </thead>
-                    <tbody></tbody>
-                </table>
-            </div>
-        </div>
-    </div>-->
-
-
-
-
                                     <div id="wait" style="display:none;width:69px;height:89px;position:absolute;top:50%;left:50%;padding:2px;">
                                         <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
                                     </div>
