--- a/Road to Recovery/pages/configScoreParameters.html
+++ b/Road to Recovery/pages/configScoreParameters.html
@@ -13,11 +13,15 @@
 </head>
 <body>
     <div class="container">
-        <button id="backBTN" onclick="BacktoCandidate()">חזרה לדף הקודם</button>
+        <!--<button id="backBTN" onclick="BacktoCandidate()">חזרה לדף הקודם</button>-->
 
         <h1>ניהול ניקוד פרמטרים</h1>
         <div id="tables-container"></div>
-        <button id="save-btn">שמירת שינויים</button>
+        <div class="inline">
+            <button id="save-btn">שמירת שינויים</button>
+            <button id="defult-value-btn">חזור לערכי ברירת מחדל</button>
+        </div>
+
     </div>
 
 
