fix and additions update to 15/10/25

--- a/Road to Recovery/pages/documentedAbsenceModal.html
+++ b/Road to Recovery/pages/documentedAbsenceModal.html
@@ -23,7 +23,7 @@
                         <th>מתאריך</th>
                         <th>עד תאריך</th>
                         <th>ימים לחזרה</th>
-                        <th>רכז.ת</th>
+                        <th>מתאם</th>
                         <th>סיבה</th>
                         <th>הערות</th>
                         <th>פעולות</th>
