--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -71,7 +71,10 @@
             width: 170px;
             margin: 0;
         }
-
+        .close-span-modal {
+            font-size: 78px;
+            color: red ;
+        }
         /*override bootstrap*/
         .page-title-box {
             background: #ffffff00; /*tranparent*/
@@ -1003,15 +1006,20 @@
             const showButtonsModal = (isReturnDrive) => {
                 if (isReturnDrive) {
                     $('#wait').hide();
-                    //document.getElementById('modalButtons').innerHTML = '<button onclick="createNewRide()" class="btn btn-success waves-effect w-md m-b-5 "><i class="ti-plus m-r-5"></i>יצירת הסעה חדשה לאותו חולה</button>&nbsp;';
+
                     document.getElementById('modalButtons').innerHTML = '<button onclick="createNewRideToAnotherPatient()" class="btn btn-success NewBtn waves-effect w-md m-b-5 "><i class="ti-plus m-r-5"></i> יצירת הסעה חדשה</button>&nbsp;';
+                    if (localStorage.getItem('userType') != undefined && localStorage.getItem('userType') == 'מנהל') {
+                        document.getElementById('modalButtons').innerHTML += '<button onclick="createNewRide()" class="btn btn-success waves-effect w-md m-b-5 "><i class="ti-plus m-r-5"></i>יצירת הסעה חדשה לאותו חולה</button>&nbsp;';
+                    }
                     document.getElementById('modalButtons').innerHTML += '<button onclick="return2manageRidePats()" class="btn btn-default waves-effect w-md m-b-5 ">חזרה לניהול ההסעות <i class="ti-back-right m-r-5"></i></button>';
                     showMyModal('Modal');
                 }
                 else {
                     $('#wait').hide();
-                    //document.getElementById('modalButtons').innerHTML = '<button onclick="createNewRide()" class="btn btn-success waves-effect w-md m-b-5 "><i class="ti-plus m-r-5"></i>יצירת הסעה חדשה לאותו חולה</button>&nbsp;';
                     document.getElementById('modalButtons').innerHTML = '<button onclick="createNewRideToAnotherPatient()" class="btn btn-success NewBtn waves-effect w-md m-b-5 "><i class="ti-plus m-r-5"></i> יצירת הסעה חדשה</button>&nbsp;';
+                    if (localStorage.getItem('userType') != undefined && localStorage.getItem('userType') == 'מנהל') {
+                        document.getElementById('modalButtons').innerHTML += '<button onclick="createNewRide()" class="btn btn-success waves-effect w-md m-b-5 "><i class="ti-plus m-r-5"></i>יצירת הסעה חדשה לאותו חולה</button>&nbsp;';
+                    }
                     document.getElementById('modalButtons').innerHTML += '<button onclick="return2manageRidePats()" class="btn btn-default waves-effect w-md m-b-5 ">חזרה לניהול ההסעות <i class="ti-back-right m-r-5"></i></button>';
                     document.getElementById('modalButtons').innerHTML += '<button onclick="createReturnRide()" class="btn btn-success waves-effect w-md m-b-5 ">יצירת החזרה &nbsp;<i class="ti-car m-r-5"></i></button>';
                     showMyModal('Modal');
@@ -3375,7 +3383,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" id="modal_x" class="close" data-dismiss="modal" aria-label="Close" onclick="editThisRide()">
-                        <span aria-hidden="true">&times;</span>
+                        <span class="close-span-modal" aria-hidden="true">&times;</span>
                     </button>
                     <h1 class="modal-title centerHeader" id="ModalTitle">הנסיעה נשמרה</h1>
 
