update visibility of X span

--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -1004,6 +1004,7 @@
             });
 
             const showButtonsModal = (isReturnDrive) => {
+                document.getElementById('modal_x').style.visibility = 'visible';
                 if (isReturnDrive) {
                     $('#wait').hide();
 
