Update modal visibility logic and pubxml history timestamp
Commented out conditional modal_x visibility logic in ridePatForm.html, so modal visibility is no longer set based on numberofrides_GLOBAL. Also updated the <History> timestamp in IISProfile1.pubxml.user.

--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -250,11 +250,12 @@
             //modal_x
             if (numberofrides_GLOBAL > 1) {
 
-                document.getElementById("modal_x").style.visibility = 'hidden';
-            } else {
-
                 document.getElementById("modal_x").style.visibility = 'visible';
             }
+            //else {
+
+            //    document.getElementById("modal_x").style.visibility = 'visible';
+            //}
 
             $(`#${id}`).modal({
                 backdrop: 'static', //prevent popup to close when clicking outside
