--- a/Road to Recovery/pages/login.html
+++ b/Road to Recovery/pages/login.html
@@ -134,7 +134,7 @@
         </div>
     </div>
     <div class="text-center">
-        תאריך עדכון אחרון: -26/12/2025 09:20
+        תאריך עדכון אחרון: - 06/02/2026 08:25
     </div>
     <div class="row" id="footer">
         <div class="col-sm-4">
