--- a/Road to Recovery/pages/Ai_report.html
+++ b/Road to Recovery/pages/Ai_report.html
@@ -305,6 +305,165 @@
             .example-queries-list::-webkit-scrollbar-thumb:hover {
                 background: #e0a800;
             }
+
+        .columns-selection-container {
+            margin-top: 20px;
+            display: none;
+        }
+
+        .columns-selection-container.active {
+            display: block;
+        }
+
+        .table-columns-section {
+            background: white;
+            border: 1px solid #e3e3e3;
+            border-radius: 5px;
+            margin-bottom: 15px;
+            overflow: hidden;
+        }
+
+        .table-columns-header {
+            background: linear-gradient(135deg, #5b69bc 0%, #4a5baf 100%);
+            color: white;
+            padding: 12px 15px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            cursor: pointer;
+        }
+
+        .table-columns-header:hover {
+            opacity: 0.95;
+        }
+
+        .table-columns-header h4 {
+            margin: 0;
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .table-columns-header .toggle-icon {
+            transition: transform 0.3s ease;
+        }
+
+        .table-columns-header.collapsed .toggle-icon {
+            transform: rotate(-90deg);
+        }
+
+        .table-columns-actions {
+            display: flex;
+            gap: 10px;
+        }
+
+        .btn-select-all, .btn-clear-all {
+            background: rgba(255,255,255,0.2);
+            border: 1px solid rgba(255,255,255,0.3);
+            color: white;
+            padding: 4px 12px;
+            border-radius: 3px;
+            font-size: 11px;
+            cursor: pointer;
+            transition: all 0.2s ease;
+        }
+
+        .btn-select-all:hover, .btn-clear-all:hover {
+            background: rgba(255,255,255,0.3);
+        }
+
+        .table-columns-body {
+            padding: 15px;
+            max-height: 300px;
+            overflow-y: auto;
+            transition: max-height 0.3s ease, padding 0.3s ease;
+        }
+
+        .table-columns-body.collapsed {
+            max-height: 0;
+            padding: 0 15px;
+            overflow: hidden;
+        }
+
+        .columns-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 8px;
+        }
+
+        .column-item {
+            display: flex;
+            align-items: center;
+            padding: 8px 10px;
+            background: #f9f9f9;
+            border-radius: 4px;
+            border: 1px solid #eee;
+            transition: all 0.2s ease;
+        }
+
+        .column-item:hover {
+            border-color: #5b69bc;
+            background: #f0f2ff;
+        }
+
+        .column-item input[type="checkbox"] {
+            margin-left: 8px;
+            width: 16px;
+            height: 16px;
+            cursor: pointer;
+        }
+
+        .column-item label {
+            cursor: pointer;
+            margin: 0;
+            font-size: 13px;
+            color: #333;
+            flex: 1;
+        }
+
+        .column-item .data-type {
+            font-size: 10px;
+            color: #888;
+            background: #e9e9e9;
+            padding: 2px 6px;
+            border-radius: 3px;
+            margin-right: 5px;
+        }
+
+        .selected-count-badge {
+            background: rgba(255,255,255,0.3);
+            padding: 2px 8px;
+            border-radius: 10px;
+            font-size: 11px;
+            margin-right: 10px;
+        }
+
+        .token-savings-info {
+            background: #d4edda;
+            border: 1px solid #c3e6cb;
+            border-radius: 5px;
+            padding: 12px 15px;
+            margin-top: 15px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .token-savings-info i {
+            color: #28a745;
+            font-size: 18px;
+        }
+
+        .token-savings-info .savings-text {
+            font-size: 13px;
+            color: #155724;
+        }
+
+        .token-savings-info .savings-number {
+            font-weight: bold;
+            color: #28a745;
+        }
     </style>
 
 
@@ -385,17 +544,17 @@
 
                                     <div class="checkbox-group">
                                         <div class="checkbox-item">
-                                            <input type="checkbox" id="table_volunteers" value="volunteer" onchange="updateSelectedTablesPreview()">
+                                            <input type="checkbox" id="table_volunteers" value="Volunteer" onchange="onTableSelectionChange('Volunteer', this.checked)">
                                             <label for="table_volunteers">מתנדבים</label>
                                         </div>
 
                                         <div class="checkbox-item">
-                                            <input type="checkbox" id="table_patients" value="patient" onchange="updateSelectedTablesPreview()">
+                                            <input type="checkbox" id="table_patients" value="Patient" onchange="onTableSelectionChange('Patient', this.checked)">
                                             <label for="table_patients">חולים</label>
                                         </div>
 
                                         <div class="checkbox-item">
-                                            <input type="checkbox" id="table_rides" value="unityride" onchange="updateSelectedTablesPreview()">
+                                            <input type="checkbox" id="table_rides" value="UnityRide" onchange="onTableSelectionChange('UnityRide', this.checked)">
                                             <label for="table_rides">הסעות</label>
                                         </div>
                                     </div>
@@ -405,6 +564,24 @@
                                         <h4><i class="fa fa-check-circle"></i> טבלאות נבחרות:</h4>
                                         <div id="selectedTablesPreview">
                                             <em style="color: #999;">לא נבחרו טבלאות</em>
+                                        </div>
+                                    </div>
+
+                                    <!-- Column Selection Section (Dynamic) -->
+                                    <div id="columnsSelectionContainer" class="columns-selection-container">
+                                        <div class="section-title" style="margin-top: 20px; font-size: 16px;">
+                                            <i class="fa fa-columns"></i>
+                                            בחירת עמודות (לחסכון בטוקנים)
+                                        </div>
+                                        <div id="columnsSelectionContent">
+                                            <!-- Dynamic column checkboxes will be inserted here -->
+                                        </div>
+                                        <div id="tokenSavingsInfo" class="token-savings-info" style="display: none;">
+                                            <i class="fa fa-leaf"></i>
+                                            <span class="savings-text">
+                                                חיסכון משוער: <span id="savingsPercent" class="savings-number">0%</span> מהטוקנים
+                                                (<span id="selectedColsCount">0</span> עמודות נבחרו מתוך <span id="totalColsCount">0</span>)
+                                            </span>
                                         </div>
                                     </div>
                                 </div>
